src/schema/snapshots/figue__schema__tests__snapshot_schema_bad_config_field.snap
---
source: src/schema/tests.rs
expression: stripped
---
Error: config field must be a struct
   ╭─[ <unknown>:4:5 ]
   │
 2 │ struct BadConfigField {
   │        ───────┬──────  
   │               ╰──────── defined at src/schema/tests.rs:130
   │ 
 4 │     config: String,
   │     ───────┬──────  
   │            ╰──────── config field must be a struct
 5 │ }
   │ ┬  
   │ ╰── end of definition
───╯
