src/schema/snapshots/figue__schema__tests__snapshot_schema_basic.snap
---
source: src/schema/tests.rs
expression: "facet_json :: to_string_pretty(& value).unwrap()"
---
{
  "args": {
    "args": {
      "verbose": {
        "name": "verbose",
        "docs": {
          "summary": "Verbose output"
        },
        "kind": {
          "Named": {
            "short": "v"
          }
        },
        "value": {
          "Leaf": {
            "kind": {
              "Scalar": "Bool"
            }
          }
        },
        "target_path": [
          "verbose"
        ]
      },
      "input": {
        "name": "input",
        "docs": {
          "summary": "Input file"
        },
        "kind": "Positional",
        "value": {
          "Leaf": {
            "kind": {
              "Scalar": "String"
            }
          }
        },
        "required": true,
        "target_path": [
          "input"
        ]
      },
      "include": {
        "name": "include",
        "docs": {
          "summary": "Include list"
        },
        "kind": {
          "Named": {}
        },
        "value": {
          "Vec": {
            "element": {
              "Leaf": {
                "kind": {
                  "Scalar": "String"
                }
              }
            }
          }
        },
        "required": true,
        "multiple": true,
        "target_path": [
          "include"
        ]
      },
      "quiet": {
        "name": "quiet",
        "docs": {
          "summary": "Quiet count"
        },
        "kind": {
          "Named": {
            "short": "q",
            "counted": true
          }
        },
        "value": {
          "Leaf": {
            "kind": {
              "Scalar": "Integer"
            }
          }
        },
        "multiple": true,
        "target_path": [
          "quiet"
        ]
      }
    },
    "subcommands": {
      "build": {
        "name": "build",
        "docs": {
          "summary": "Build stuff"
        },
        "args": {
          "args": {
            "release": {
              "name": "release",
              "docs": {
                "summary": "Release build"
              },
              "kind": {
                "Named": {
                  "short": "r"
                }
              },
              "value": {
                "Leaf": {
                  "kind": {
                    "Scalar": "Bool"
                  }
                }
              },
              "target_path": [
                "release"
              ]
            }
          },
          "subcommands": {}
        }
      },
      "clean-all": {
        "name": "clean-all",
        "docs": {
          "summary": "Clean"
        },
        "args": {
          "args": {},
          "subcommands": {}
        }
      }
    },
    "subcommand_field_name": "command"
  },
  "config": {
    "field_name": "config",
    "fields": {
      "host": {
        "docs": {},
        "value": {
          "Leaf": {
            "kind": {
              "Scalar": "String"
            }
          }
        },
        "target_path": [
          "host"
        ]
      },
      "port": {
        "docs": {},
        "value": {
          "Leaf": {
            "kind": {
              "Scalar": "Integer"
            }
          }
        },
        "target_path": [
          "port"
        ]
      }
    }
  },
  "special": {}
}
