src/schema/snapshots/figue__schema__tests__snapshot_schema_env_prefix_without_config.snap
---
source: src/schema/tests.rs
expression: stripped
---
Error: field `value` uses args::env_prefix without args::config
   ╭─[ <unknown>:4:5 ]
   │
 2 │ struct EnvPrefixWithoutConfig {
   │        ───────────┬──────────  
   │                   ╰──────────── defined at src/schema/tests.rs:108
   │ 
 4 │     value: String,
   │     ──────┬──────  
   │           ╰──────── field `value` uses args::env_prefix without args::config
 5 │ }
   │ ┬  
   │ ╰── end of definition
───╯
