src/schema/snapshots/figue__schema__tests__snapshot_schema_subcommand_on_non_enum.snap
---
source: src/schema/tests.rs
expression: stripped
---
Error: field `value` marked as subcommand must be an enum
   ╭─[ <unknown>:4:5 ]
   │
 2 │ struct SubcommandOnNonEnum {
   │        ─────────┬─────────  
   │                 ╰─────────── defined at src/schema/tests.rs:90
   │ 
 4 │     value: String,
   │     ──────┬──────  
   │           ╰──────── field `value` marked as subcommand must be an enum
 5 │ }
   │ ┬  
   │ ╰── end of definition
───╯
