src/schema/snapshots/figue__schema__tests__snapshot_schema_top_level_enum.snap
---
source: src/schema/tests.rs
expression: stripped
---
Error: top-level shape must be a struct
   ╭─[ <unknown>:1:1 ]
   │
 1 │ ╭─▶ #[derive(Facet)]
   ┆ ┆   
 3 │ │   enum TopLevelEnum {
   │ │        ──────┬─────  
   │ │              ╰─────── defined at src/schema/tests.rs:136
   ┆ ┆   
 5 │ ├─▶ }
   │ │   ┬  
   │ │   ╰── end of definition
   │ │      
   │ ╰────── top-level shape must be a struct
───╯
